plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.catacomb5099'
version = '0.0.1-SNAPSHOT'
description = 'Seerr(previously Jellyseerr) but for music'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation('org.springframework.boot:spring-boot-starter-webflux') {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	implementation 'org.postgresql:r2dbc-postgresql'
	// Spring Boot 4 moved Flyway autoconfiguration out of spring-boot-autoconfigure into its own
	// starter (spring-boot-starter-flyway, which also brings in spring-boot-starter-jdbc for the
	// blocking DataSource Flyway needs). flyway-database-postgresql is the dialect-specific module,
	// added on top since the starter itself is database-agnostic.
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-database-postgresql'
	// Flyway needs a blocking driver. Used ONLY to run migrations at startup; the runtime path
	// stays entirely on r2dbc-postgresql.
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'me.xdrop:fuzzywuzzy:1.4.0'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers-postgresql'
	testImplementation 'org.testcontainers:testcontainers-r2dbc'
	// HTTP-boundary tests for provider clients (WebClient request/response mocking)
	testImplementation 'com.squareup.okhttp3:mockwebserver:5.4.0'
	// Mocking library for tests (MockK)
	testImplementation 'io.mockk:mockk:1.14.9'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
